--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   "homepage": "https://github.com/threebrick/knowledgehelp2#readme",
   "dependencies": {
     "bluebird": "^3.5.0",
+    "body-parser": "^1.17.1",
     "botbuilder": "^3.7.0",
+    "botmetrics": "0.0.10",
+    "express": "^4.15.2",
     "lodash": "^4.17.4",
     "restify": "^4.3.0",
     "util": "^0.10.3"
