--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
     "botbuilder": "^3.7.0",
+    "botbuilder-cognitiveservices": "^1.0.1",
     "botmetrics": "0.0.10",
     "express": "^4.15.2",
     "lodash": "^4.17.4",
